Signed-off-by: Aidan Mooney <amooney@cs.nuim.ie> test

--- a/manifesto/pact-manifesto.tex
+++ b/manifesto/pact-manifesto.tex
@@ -75,7 +75,7 @@ A Moodle system was hosted in the Department of Computer Science to store the co
 Sections 1 and 2 provided an introduction to the Python programming language. These sections covered the basics of installation of Python and also looked at how to create and run programs written in Python. They looked at the main features of the language and gave sample programs for the teachers to use. An exercise book was created for all lessons within these sections which the teacher could use in class to get their students working in Python. In total 19 presentations were prepared for these sections which the teacher could break up into whatever format they felt worked for them. Section 3 focused on Algorithms and the process of writing them. It showed how to write a step by step procedure to solve particular problems. Section 4 looked at generating graphics using the Pygame set of modules. This section focused on allowing the participants to create fully featured games in the python language. Section 5 covers topics related to recursion which has been defined as ``the process of repeating items in a self-similar way" and is fundamental to the core theory of Computer Science. \\
 
 
-\textbf{Should we put in learning outcomes here?}
+\textbf{Should we put in learning outcomes here??}
 \newline
 
 
