--- a/manifesto/ref.bib
+++ b/manifesto/ref.bib
@@ -1,3 +1,35 @@
+@InProceedings{conneely13,
+author = {C. Conneely and D. Murchan and B. Tangney and K. Johnston},
+title = {21 Century Learning - Teachers’ and Students’ Experiences and Views of the Bridge21 Approach within Mainstream Education},
+booktitle = {Society for Information Technology \& Teacher Education International Conference},
+pages = {5125-5132},
+year = {2013},
+month = {March},
+}
+
+
+@Article{papert96,
+author = {Seymour Papert},
+title = {An Exploration in the Space of Mathematics Educations},
+journal = {International Journal of Computers for Mathematical Learning},
+year = {1996},
+volume = {1},
+number = {1},
+pages = {95-123},
+}
+
+
+@Article{wing-cacm06,
+author = {Jeannette M. Wing},
+title = {Computational Thinking},
+journal = {Communications of the ACM},
+year = {2006},
+volume = {49},
+number = {3},
+pages = {33-35},
+month = {March},
+}
+
 @article{ncca2013,
   TITLE =        {Key Skills of Junior Cycle},
   author =       {NCCA},
