--- a/manifesto/ref.bib
+++ b/manifesto/ref.bib
@@ -30,13 +30,22 @@ pages = {33-35},
 month = {March},
 }
 
-@article{ncca2013,
+@Misc{ncca2013,
   TITLE =        {Key Skills of Junior Cycle},
   author =       {NCCA},
-  howpublished = {online},
-  address =      {$http://www.juniorcycle.ie/NCCA_JuniorCycle/media/NCCA/Documents/Key/Key-Skills-Overview-Feb-2013.pdf$},
+  howpublished = {\url{http://www.juniorcycle.ie/NCCA_JuniorCycle/media/NCCA/Documents/Key/Key-Skills-Overview-Feb-2013.pdf}},
   month =        {February},
   year =         {2013},
+}
+
+
+
+@Misc{ncca-prog13,
+author = {NCCA},
+title = {Programming and Coding: Draft Specification for Junior Cycle Short Course},
+howpublished = {\url{http://www.juniorcycle.ie/Curriculum/Consultation/Short-Courses/Programming-and-Coding}},
+month = {October},
+year = {2013},
 }
 
 @article{scratch2013,
@@ -57,11 +66,28 @@ month = {March},
   year =         {2014},
 }
 
-@article{compSchools,
-  TITLE =        {Computing in Schools},
+@Misc{bcs-curr12,
+author = {Computing at School Working Group},
+title = {Computer Science: A Curriculum for Schools},
+howpublished = {\url{http://www.computingatschool.org.uk/data/uploads/ComputingCurric.pdf}},
+month = {March},
+year = {2012},
+}
+
+@Misc{cat-brief-11,
+author = {Computing at School Working Group},
+title = {Computing at School: 
+International comparisons},
+howpublished = {\url{http://www.computingatschool.org.uk/data/uploads/internationalcomparisons-v5.pdf}},
+month = {November},
+year = {2011},
+}
+
+
+@Misc{rcs-cis12,
+  TITLE =        {Shut down or restart?  The way forward for computing in UK schools},
   author =       {The Royal Society},
-  howpublished = {online},
-  address =      {$http://royalsociety.org/education/policy/computing-in-schools/$},
+  howpublished = {\url{http://royalsociety.org/education/policy/computing-in-schools/}},
   month =        {January},
   year =         {2012},
 }
